--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <table>
-        <tr>
+        <tr class="title">
             <th>Kolumna 1</th>
             <th>Kolumna 2</th>
             <th>Kolumna 3</th>
